--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,4 +16,4 @@
 </footer>
 </html>
 
-<%= link_to 'About', about_path %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
