--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <footer class="footer"
+  <footer class="footer">
     <small>
       Copyright &copy; <a href="https//www.udemy.com">The Complete Ruby on Rails Developer</a>
       by <a href="http://www.mashrurhossain.com/">Mashrur Hossain</a>
